crates/xlate/tests/snapshots/golden_matrix__tools_strict_unsatisfiable_schema__gpt-4o-mini__20260910__chat_to_responses__gpt4o.snap
---
source: crates/xlate/tests/golden_matrix.rs
expression: rendered
---
--- body ---
{
  "model": "gpt-4o",
  "input": [
    {
      "type": "message",
      "role": "user",
      "content": [
        {
          "type": "input_text",
          "text": "Make a code and call the tool."
        }
      ]
    }
  ],
  "tools": [
    {
      "type": "function",
      "name": "make_code",
      "description": "Make a code.",
      "parameters": {
        "additionalProperties": false,
        "properties": {
          "code": {
            "minLength": 2,
            "type": "string"
          }
        },
        "required": [
          "code"
        ],
        "type": "object"
      },
      "strict": true
    }
  ],
  "max_output_tokens": 128
}
--- headers ---
content-type: application/json
upstream_streams: false
--- degraded ---
